fix align-items footer

--- a/develop/css/responsive.scss
+++ b/develop/css/responsive.scss
@@ -462,6 +462,9 @@
 	.map {
 		height: 300px;
 	}
+	.contact {
+		align-items: baseline;
+	}
 	.slider1__item{
 		margin-left: -10px;
 		margin-right: -10px;
